# binance-future-trading-bot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
app/: main.py
app/handler/: __init__.py  command.py  message.py  util.py
app/model/: __init__.py  message_parser.py
app/service/: __init__.py  api_client.py  logger.py  setting.py  ws_client.py
