[tool.poetry]
name = "binance-future-trading-bot"
version = "0.0.1"
description = ""
authors = ["Faris Fraeed Khaymi <farisfareed.k@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
binance-futures-connector = "4.0.0"
python-telegram-bot = "20.6"
pydantic-settings = "2.0.3"

[tool.poetry.group.dev.dependencies]
black = "23.10.0"
isort = "5.12.0"
flake8 = "6.1.0"
mypy = "1.6.1"
pre-commit = "3.5.0"
commitizen = "3.12.0"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
python_version = '3.11'

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "0.0.1"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
